# deepdeblur3d-app

./: pyproject.toml  readme.md  requirements.txt    .pub
src/deblur3d/: __init__.py
src/deblur3d/infer/: tiled.py
src/deblur3d/models/: unet3d.py
src/deblur3d_app/: _workers.py  gui.py
src/deblur3d_gui.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
